--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,30 @@
 [package]
-name = "okrust"
-version = "0.1.0"
+name = "okid"
+version = "0.1.1"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+publish = ["oksoftware"]
 
 [dependencies]
+blake3 = { version = "1.5.4", optional = true }
+digest = "0.10.7"
+enumflags2 = "0.7.10"
+hex = { version = "0.4.3", features = ["serde"] }
+serde = { version = "1.0.210", features = ["derive"] }
+serde_bytes = "0.11.15"
+sha1 = { version = "0.10.6", optional = true }
+sha2 = { version = "0.10.8", optional = true }
+sha3 = { version = "0.10.8", optional = true }
+ulid = { version = "1.1.3", optional = true }
+uuid = { version = "1.10.0", optional = true }
+
+[features]
+default = ["sha1", "sha2", "sha3", "blake3"]
+sha1 = ["dep:sha1"]
+sha2 = ["dep:sha2"]
+sha3 = ["dep:sha3"]
+blake3 = ["dep:blake3"]
+uuid = ["dep:uuid"]
+ulid = ["dep:ulid"]
+
+[dev-dependencies]
+insta = { version = "1.40.0", features = ["yaml"] }
