--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "okid"
-version = "0.1.1"
+version = "0.1.3"
 edition = "2021"
 publish = ["oksoftware"]
 
@@ -14,11 +14,11 @@ serde_bytes = "0.11.15"
 sha1 = { version = "0.10.6", optional = true }
 sha2 = { version = "0.10.8", optional = true }
 sha3 = { version = "0.10.8", optional = true }
-ulid = { version = "1.1.3", optional = true }
-uuid = { version = "1.10.0", optional = true }
+ulid = { version = "1.1.3", optional = true, features = ["uuid"] }
+uuid = { version = "1.10.0", optional = true, features = ["js", "v4"] }
 
 [features]
-default = ["sha1", "sha2", "sha3", "blake3"]
+default = ["sha1", "sha2", "sha3", "blake3", "uuid", "ulid"]
 sha1 = ["dep:sha1"]
 sha2 = ["dep:sha2"]
 sha3 = ["dep:sha3"]
