--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,5 +17,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build
         run: cargo build --verbose
-      - name: Run tests
+      - name: Run tests no-features
+        run: cargo test --verbose --no-default-features
+      - name: Run tests all-features
         run: cargo test --verbose --all-features
