--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ enumflags2 = "0.7.10"
 git2 = { version = "0.18.3", optional = true, default-features = false }
 hex = { version = "0.4.3", features = ["serde"] }
 jetstream_wireformat = "6.4.2"
+mac_address = { version = "1.1.7", optional = true }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 sha1 = { version = "0.10.6", optional = true }
@@ -25,7 +26,7 @@ utoipa = { version = "^5.0.0-beta.0", optional = true }
 uuid = { version = "1.10.0", optional = true, features = ["js", "v4"] }
 
 [features]
-default = ["sha1", "sha2", "sha3", "blake3", "uuid", "ulid", "openapi"]
+default = ["sha2", "sha3", "blake3", "uuid", "ulid", "openapi"]
 sha1 = ["dep:sha1"]
 sha2 = ["dep:sha2"]
 sha3 = ["dep:sha3"]
@@ -35,6 +36,7 @@ ulid = ["dep:ulid"]
 openapi = ["dep:utoipa"]
 git = ["dep:git2"]
 graphql = ["dep:async-graphql"]
+node = ["dep:mac_address"]
 
 [dev-dependencies]
 insta = { version = "1.40.0", features = ["yaml"] }
