--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,21 @@
 [package]
 name = "okid"
-version = "0.5.3"
+version = "0.5.1"
 edition = "2021"
 readme = "README.md"
 description = "A library for gereating double clickable ids"
 license = "BSD-3-Clause"
 
 [dependencies]
-async-graphql = { version = "7.0.13", optional = true }
+async-graphql = { version = "7.0.11", optional = true }
 blake3 = { version = "1.5.4", optional = true }
 bytes = { version = "1.7.2", features = ["serde"] }
 digest = "0.10.7"
 enumflags2 = "0.7.10"
 git2 = { version = "0.19.0", optional = true, default-features = false }
 hex = { version = "0.4.3", features = ["serde"] }
-jetstream_wireformat = "7.1.1"
 mac_address = { version = "1.1.7", optional = true }
-serde = { version = "1.0.217", features = ["derive"] }
+serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
 sha1 = { version = "0.10.6", optional = true }
 sha2 = { version = "0.10.8", optional = true }
@@ -24,6 +23,13 @@ sha3 = { version = "0.10.8", optional = true }
 ulid = { version = "1.1.3", optional = true, features = ["uuid"] }
 utoipa = { version = "^5.0.0-beta.0", optional = true }
 uuid = { version = "1.10.0", optional = true, features = ["js", "v4"] }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+jetstream_wireformat = "7.3.0"
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+jetstream_wireformat = { version = "7.3.0", no-default-features = true, features = [
+    "std",
+] }
 
 [features]
 default = ["sha2", "sha3", "blake3", "uuid", "ulid", "openapi"]
