--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,9 @@ name = "okid"
 version = "0.7.0"
 edition = "2021"
 readme = "README.md"
-description = "A library for gereating double clickable ids"
+description = "A library for generating double clickable ids"
 license = "BSD-3-Clause"
+keywords = ["double-click", "double-clickable", "id", "hash"]
 
 [dependencies]
 async-graphql = { version = "7.0.11", optional = true }
