--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ ts-rs = { version = "10.1.0", optional = true }
 ulid = { version = "1.2.0", optional = true, features = ["uuid"] }
 utoipa = { version = "^5.0.0-beta.0", optional = true }
 uuid = { version = "1.13.1", optional = true, features = ["js", "v4"] }
+zerocopy = "0.8.18"
+zeroize = "1.8.1"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 jetstream_wireformat = "8.1.1"
