feat: swift bindings

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ serde_json = "1.0.137"
 sha1 = { version = "0.10.6", optional = true }
 sha2 = { version = "0.10.8", optional = true }
 sha3 = { version = "0.10.8", optional = true }
-ts-rs = { version = "10.1.0", optional = true }
+typeshare = "1.0.4"
 ulid = { version = "1.2.0", optional = true, features = ["uuid"] }
 utoipa = { version = "^5.0.0-beta.0", optional = true }
 uuid = { version = "1.13.1", optional = true, features = ["js", "v4"] }
@@ -44,7 +44,6 @@ uuid = ["dep:uuid"]
 ulid = ["dep:ulid"]
 openapi = ["dep:utoipa"]
 graphql = ["dep:async-graphql"]
-ts = ["dep:ts-rs"]
 
 [dev-dependencies]
 insta = { version = "1.40.0", features = ["yaml"] }
