--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,12 @@ keywords = ["double-click", "double-clickable", "id", "hash"]
 
 [dependencies]
 async-graphql = { version = "7.0.15", optional = true }
-blake3 = { version = "1.5.4", optional = true }
+blake3 = { version = "1.5.4", optional = true, features = ["traits-preview"]}
 bytes = { version = "1.10.0", features = ["serde"] }
 digest = "0.10.7"
 enumflags2 = "0.7.10"
 hex = { version = "0.4.3", features = ["serde"] }
+okstd = "1.0.2"
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.137"
 sha1 = { version = "0.10.6", optional = true }
@@ -23,7 +24,7 @@ typeshare = "1.0.4"
 ulid = { version = "1.2.0", optional = true, features = ["uuid"] }
 utoipa = { version = "^5.0.0-beta.0", optional = true }
 uuid = { version = "1.13.1", optional = true, features = ["js", "v4"] }
-zerocopy = "0.8.18"
+zerocopy = { version = "0.8.18", features = ["derive"] }
 zeroize = "1.8.1"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
@@ -34,7 +35,7 @@ jetstream_wireformat = { version = "8.1.2", default-features = false, features =
 ] }
 
 [features]
-default = ["sha2", "sha3", "blake3", "uuid", "ulid", "openapi"]
+default = ["sha2", "sha3", "blake3", "uuid", "ulid", "openapi", "sha1"]
 macro-diagnostics = []
 sha1 = ["dep:sha1"]
 sha2 = ["dep:sha2"]
