feat: wasm_bindgen for oksecret

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,14 @@ description = "A library for generating double clickable ids"
 license = "BSD-3-Clause"
 keywords = ["double-click", "double-clickable", "id", "hash"]
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 async-graphql = { version = "7.0.15", optional = true }
 blake3 = { version = "1.6.1", optional = true, features = ["traits-preview"]}
 bytes = { version = "1.10.1", features = ["serde"] }
+getrandom = { version = "0.3.2", features = ["wasm_js"] }
 digest = "0.10.7"
 enumflags2 = "0.7.10"
 hex = { version = "0.4.3", features = ["serde"] }
@@ -26,6 +30,7 @@ utoipa = { version = "^5.0.0-beta.0", optional = true }
 uuid = { version = "1.15.1", optional = true, features = ["js", "v4"] }
 zerocopy = { version = "0.8.24", features = ["derive"] }
 zeroize = "1.8.1"
+wasm-bindgen = "0.2.100"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 jetstream_wireformat = "8.1.2"
@@ -33,6 +38,7 @@ jetstream_wireformat = "8.1.2"
 jetstream_wireformat = { version = "8.1.2", default-features = false, features = [
     "std",
 ] }
+
 
 [features]
 default = ["sha2", "sha3", "blake3", "uuid", "ulid", "openapi"]
