--- a/.github/workflows/typescript.yml
+++ b/.github/workflows/typescript.yml
@@ -32,5 +32,7 @@ jobs:
         run: RUSTFLAGS='--cfg getrandom_backend="wasm_js"' wasm-pack build --target web
 
       - name: Test with deno
-        working-directory: ./ts_tests
-        run: deno index.ts
+        working-directory: ts_tests
+        run: |
+          npm install
+          deno index.ts
