--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,6 @@
+[workspace]
+members = [".", "xtask"]
+
 [package]
 name = "okid"
 version = "0.14.0"
@@ -7,8 +10,6 @@ description = "A library for generating double clickable ids"
 license = "BSD-3-Clause"
 keywords = ["double-click", "double-clickable", "id", "hash"]
 
-[lib]
-crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 async-graphql = { version = "7.0.15", optional = true }
@@ -16,32 +17,33 @@ blake3 = { version = "1.6.1", optional = true, features = ["traits-preview"]}
 bytes = { version = "1.10.1", features = ["serde"] }
 getrandom = { version = "0.3.2", features = ["wasm_js"] }
 digest = "0.10.7"
-enumflags2 = "0.7.10"
 hex = { version = "0.4.3", features = ["serde"] }
 okstd = "1.0.2"
 serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
+serde_json = {version = "1.0.140", optional = true }
 sha1 = { version = "0.10.6", optional = true }
 sha2 = { version = "0.10.8", optional = true }
 sha3 = { version = "0.10.8", optional = true }
-typeshare = "1.0.4"
 ulid = { version = "1.2.1", optional = true, features = ["uuid"] }
 utoipa = { version = "^5.0.0-beta.0", optional = true }
 uuid = { version = "1.15.1", optional = true, features = ["js", "v4"] }
-zerocopy = { version = "0.8.25", features = ["derive"] }
-zeroize = "1.8.1"
+zerocopy = { version = "0.8.24", features = ["derive"] }
 wasm-bindgen = "0.2.100"
+uniffi = { version = "0.29.2", features = ["bindgen", "cli"] }
+uniffi_macros = "0.29.2"
+thiserror = "2.0.12"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-jetstream_wireformat = "8.1.5"
+jetstream_wireformat = "8.1.2"
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 jetstream_wireformat = { version = "8.1.2", default-features = false, features = [
     "std",
 ] }
+getrandom = { version = "0.3.3", features = ["wasm_js"] }
 
 
 [features]
-default = ["sha2", "sha3", "blake3", "uuid", "ulid", "openapi"]
+default = ["sha2", "sha3", "blake3", "uuid", "ulid"]
 macro-diagnostics = []
 sha1 = ["dep:sha1"]
 sha2 = ["dep:sha2"]
@@ -49,12 +51,23 @@ sha3 = ["dep:sha3"]
 blake3 = ["dep:blake3"]
 uuid = ["dep:uuid"]
 ulid = ["dep:ulid"]
-openapi = ["dep:utoipa"]
+openapi = ["dep:utoipa", "json"]
+json = ["serde_json"]
 graphql = ["dep:async-graphql"]
 
+[build-dependencies]
+uniffi = { version = "0.29.2", features = ["build"] }
+
 [dev-dependencies]
-insta = { version = "1.43.1", features = ["yaml"] }
+insta = { version = "1.42.2", features = ["yaml"] }
 
 [[bin]]
 name = "oksecret"
 path = "src/main.rs"
+
+[[bin]]
+name = "uniffi-bindgen"
+path = "uniffi-bindgen.rs"
+[lib]
+name = "okid"
+crate-type = ["cdylib", "rlib", "staticlib"]
