--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ uuid = { version = "1.18.0", optional = true, features = ["js", "v4"] }
 zerocopy = { version = "0.8.26", features = ["derive"] }
 wasm-bindgen = "0.2.100"
 thiserror = "2.0.12"
+iroh = { version = "0.92.0", default-features = false, optional = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 jetstream_wireformat = "8.3.1"
@@ -52,6 +53,7 @@ ulid = ["dep:ulid"]
 openapi = ["dep:utoipa", "json"]
 json = ["serde_json"]
 graphql = ["dep:async-graphql"]
+node_id = ["dep:iroh"]
 
 
 [dev-dependencies]
