--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ zerocopy = { version = "0.8.26", features = ["derive"] }
 wasm-bindgen = "0.2.100"
 thiserror = "2.0.12"
 iroh = { version = "0.92.0", default-features = false, optional = true }
+bubblebabble = "0.1.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 jetstream_wireformat = "8.3.1"
