--- a/codebook.toml
+++ b/codebook.toml
@@ -1,6 +1,4 @@
-dictionaries = []
-words = ["okid"]
-flag_words = []
-ignore_paths = []
-ignore_patterns = []
-use_global = true
+words = [
+    "bubblebabble",
+    "okid",
+]
