--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ wasm-bindgen = "0.2.100"
 thiserror = "2.0.12"
 iroh = { version = "0.92.0", default-features = false, optional = true }
 bubblebabble = "0.1.2"
+pkarr = { version = "4.0.0", optional = true }
+ed25519-dalek = "2.2.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 jetstream_wireformat = "8.3.1"
@@ -54,7 +56,8 @@ ulid = ["dep:ulid"]
 openapi = ["dep:utoipa", "json"]
 json = ["serde_json"]
 graphql = ["dep:async-graphql"]
-node_id = ["dep:iroh"]
+pkarr = ["dep:pkarr"]
+iroh = ["dep:iroh"]
 
 
 [dev-dependencies]
