--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ iroh = { version = "0.93.2", default-features = false, optional = true }
 bubblebabble = "0.1.2"
 pkarr = { version = "5.0.0", optional = true }
 ed25519-dalek = "2.2.0"
+iroh-base = {version="0.93.2", optional = true}
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 jetstream_wireformat = {workspace = true}
@@ -60,8 +61,7 @@ openapi = ["dep:utoipa", "json"]
 json = ["serde_json"]
 graphql = ["dep:async-graphql"]
 pkarr = ["dep:pkarr"]
-iroh = ["dep:iroh"]
-
+iroh = ["dep:iroh", "dep:iroh-base"]
 
 [dev-dependencies]
 insta = { version = "1.42.2", features = ["yaml"] }
