feat: hmac helpers and worker extensions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,8 @@ bubblebabble = "0.1.2"
 pkarr = { version = "5.0.0", optional = true }
 ed25519-dalek = "2.2.0"
 iroh-base = {version="0.93.2", optional = true}
+worker = { version = "0.6.7", optional = true }
+hmac = "0.12.1"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 jetstream_wireformat = {workspace = true}
@@ -62,6 +64,7 @@ json = ["serde_json"]
 graphql = ["dep:async-graphql"]
 pkarr = ["dep:pkarr"]
 iroh = ["dep:iroh", "dep:iroh-base"]
+worker = ["dep:worker"]
 
 [dev-dependencies]
 insta = { version = "1.42.2", features = ["yaml"] }
