--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ ed25519-dalek = "2.2.0"
 iroh-base = {version="0.93.2", optional = true}
 worker = { version = "0.6.7", optional = true }
 hmac = "0.12.1"
+schemars = { version = "1.1.0", optional = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 jetstream_wireformat = {workspace = true}
@@ -66,6 +67,7 @@ graphql = ["dep:async-graphql"]
 pkarr = ["dep:pkarr"]
 iroh = ["dep:iroh", "dep:iroh-base"]
 worker = ["dep:worker"]
+jsonschema = ["dep:schemars"]
 
 [dev-dependencies]
 insta = { version = "1.42.2", features = ["yaml"] }
